--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,21 +1,14 @@
-
-:root{
-  --font-baskerville: 'Libre Baskerville', serif;
-  --font-size-baskerville: 28px;
-  --font-height--baskerville: 28px;
-  --color-font: #3b3b3b;
-}
-
 .nav{
-  background-color: white;
+  background-image: linear-gradient(to bottom, #ececec -32%, #fff 124%);
   width: 100%;
-  height: 80px;
+  height: 114px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding: 0 70px 0 70px;
-  box-shadow: 0px 4px 5px #7272724a;
+  margin: 0 0 70px;
+  padding: 44px 1082px 42px 150px;
+  box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
 }
 
 .nav a{
