Se agrego interpolation

--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -1,1 +1,14 @@
-<p>noticia works!</p>
+<section class="card">
+  <div class="card__content">
+    <div class="card__autor">
+      <img src="{{iconReloj}}" alt="">
+      <p>{{noticia.created_at}} {{noticia.author}}</p>
+    </div>
+    <div class="card__news">
+      <p>{{noticia.story_title }}</p>
+    </div>
+  </div>
+  <div class="card__icon">
+    <img src="{{iconLike}}" alt="">
+  </div>
+</section>
