--- a/src/app/components/noticia/noticia.component.scss
+++ b/src/app/components/noticia/noticia.component.scss
@@ -1,7 +1,7 @@
 .card{
   display: flex;
   flex-direction: row;
-  width: 550px;
+  width: 100%;
   height: 90px;
   justify-content: space-between;
   align-items: center;
@@ -10,6 +10,7 @@
   border-radius: 6px;
   border: solid 1px #979797;
   background-color: #fff;
+  margin: 10px 0px;
   z-index: 0;
 }
 .card__content{
@@ -64,5 +65,21 @@
   border-radius: 6px;
   border: solid 1px #f8f8f8;
   background-color: #f8f8f8;
+  cursor: pointer;
+}
+.card__icon img{
+  transition: .2s ease all;
+  &.active{
+    -webkit-transform:scale(1.3);transform:scale(1.3);
+    background-image:url(./../../../assets/images/iconmonstr-favorite-3.svg);
+  }
+
+}
+
+@media (min-width: 555px){
+  .card{
+    width: 550px;
+
+  }
 }
 
