--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -4,10 +4,10 @@
   height: 114px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   margin: 0 0 70px;
-  padding: 44px 1082px 42px 150px;
+  padding: 44px 0px 42px 0px;
   box-shadow: 0 1px 4px 0 rgba(0, 21, 41, 0.12);
 }
 
@@ -23,4 +23,10 @@
   font-weight: normal;
 }
 
+@media (min-width: 1366px){
+  .nav{
+    justify-content: flex-start;
+    padding: 44px 150px 42px 150px;
+  }
+}
 
