Se corrigieron errores

--- a/src/app/components/noticia/noticia.component.html
+++ b/src/app/components/noticia/noticia.component.html
@@ -9,6 +9,6 @@
     </div>
   </div>
   <div (click)="activeImg()" class="card__icon">
-    <img src="{{iconoDisLike}}" [class.active]="imagenActiva" alt="">
+    <img src="{{iconoDisLike}}" [class.active]="active" alt="">
   </div>
 </section>
