--- a/src/app/components/noticia/noticia.component.scss
+++ b/src/app/components/noticia/noticia.component.scss
@@ -13,9 +13,11 @@
   margin: 10px 0px;
   z-index: 0;
 }
+
 .card__content{
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .card__autor{
@@ -34,12 +36,12 @@
   letter-spacing: normal;
   color: #767676;
 }
+
 .card__autor img{
   width: 16px;
   height: 16px;
   margin-right: 8px;
 }
-
 
 .card__news{
   display: flex;
@@ -67,19 +69,19 @@
   background-color: #f8f8f8;
   cursor: pointer;
 }
+
 .card__icon img{
   transition: .2s ease all;
   &.active{
     -webkit-transform:scale(1.3);transform:scale(1.3);
     background-image:url(./../../../assets/images/iconmonstr-favorite-3.svg);
   }
-
 }
 
-@media (min-width: 555px){
+@media (min-width: 720px){
   .card{
     width: 550px;
-
+    margin: 5px;
   }
 }
 
